[package]
name = "async-bb8-diesel"
description = "async bb8 connection manager for Diesel"
version = "0.1.0"
authors = ["Sean Klein <sean@oxide.computer>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/oxidecomputer/async-bb8-diesel"
keywords = ["diesel", "r2d2", "pool", "tokio", "async"]

[dependencies]
bb8 = "0.8"
async-trait = "0.1.58"
diesel = { git = "https://bitbucket.org/sanchithhegde-juspay/diesel", default-features = false, features = ["r2d2"], rev = "b447d6685334582271222034bf9dfb12872cf6fc" }
thiserror = "1.0"
tokio = { version = "1.21", default-features = false, features = ["rt-multi-thread"] }

[dev-dependencies]
diesel = { git = "https://bitbucket.org/sanchithhegde-juspay/diesel", features = ["postgres", "r2d2"], rev = "b447d6685334582271222034bf9dfb12872cf6fc" }
tokio = { version = "1.21", features = ["macros"] }
